# CoCrystalBoost

./: .gitignore  README.md  pyproject.toml
cocrystalboost/: __init__.py  __main__.py  data.py  features.py  main.py  modeling.py  params.py  settings.py  tuning.py
data/: sample_submission.csv  test.csv
data/train_dataset/: Train Balanced Data.csv  train.csv  train_augmented.csv  train_augmented_balanced.csv  train_extended.csv
notebooks/: FinalSolution.ipynb
scripts/: predict.py  tune_lgbm.py
